--- a/jjjjj.html
+++ b/jjjjj.html
@@ -32,7 +32,7 @@
         <!-- Profile Image with Animation & Gradient Border -->
         <div class="w-1/2 flex justify-center animate-fadeInLeft">
             <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas" class="rounded-full w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+                <img src="https://i.pinimg.com/736x/6d/d9/3b/6dd93b69ac1c17ea3b5ce37a14adb150.jpg" alt="Nicholai Thomas" class="rounded-full w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
             </div>
         </div>
 
@@ -85,9 +85,6 @@
     .delay-500 { animation-delay: 0.5s; }
     .delay-700 { animation-delay: 0.7s; }
 </style>
-
-<!-- FontAwesome Icons -->
-<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
 
 <section id="about" class="relative bg-gradient-to-r from-black/60 to-black/80 text-white py-16">
     <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/dark-mesh.png')] opacity-10"></div> 
@@ -145,7 +142,7 @@
         <!-- Right: Profile Image -->
         <div class="w-full md:w-1/2 flex justify-center md:justify-end animate-fadeInRight mt-8 md:mt-0">
             <div class="rounded-xl p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas"
+                <img src="https://i.pinimg.com/736x/6d/d9/3b/6dd93b69ac1c17ea3b5ce37a14adb150.jpg" alt="Nicholai Thomas"
                     class="rounded-xl w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
             </div>
         </div>
@@ -169,18 +166,15 @@
     .animate-fadeIn { animation: fadeIn 1.5s ease-in-out forwards; }
 </style>
 
-<!-- FontAwesome Icons -->
-<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
-
     <section id="resume" class="relative bg-black text-white py-16">
     <div class="container mx-auto flex flex-wrap items-start justify-between px-8">
 
         <!-- Left Container (Profile & Contact) -->
-        <div class="w-full md:w-1/3 bg-black/60 p-6 rounded-lg shadow-lg animate-slideInLeft">
+        <div class="w-full md:w-1/3 bg-black/30 p-6 rounded-lg shadow-lg animate-slideInLeft">
             <!-- Profile Photo -->
             <div class="flex flex-col items-center">
                 <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                    <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Profile Photo"
+                    <img src="https://i.pinimg.com/736x/6d/d9/3b/6dd93b69ac1c17ea3b5ce37a14adb150.jpg" alt="Profile Photo"
                         class="rounded-full w-40 h-40 border-4 border-transparent hover:border-red-500 transition duration-500">
                 </div>
                 <h2 class="text-3xl font-bold mt-4">Nicholai Thomas</h2>
@@ -188,21 +182,21 @@
             </div>
 
             <!-- Contact Card -->
-            <div class="mt-6 bg-gray-800 p-4 rounded-lg shadow-md">
+            <div class="mt-6 bg-gray-100 p-4 rounded-lg shadow-md">
                 <h3 class="text-xl font-semibold text-red-500 flex items-center space-x-2">
                     <i class="fas fa-address-card"></i>
                     <span>Contact Info</span>
                 </h3>
                 <div class="mt-3 space-y-2">
-                    <p class="flex items-center space-x-3"><i class="fas fa-envelope text-red-500"></i> <span>nicholai@email.com</span></p>
-                    <p class="flex items-center space-x-3"><i class="fas fa-phone text-red-500"></i> <span>(123) 456-7890</span></p>
-                    <p class="flex items-center space-x-3"><i class="fas fa-map-marker-alt text-red-500"></i> <span>New York, USA</span></p>
+                    <p class="flex items-center space-x-3"><i class="fas fa-envelope text-red-500"></i> <span>net4gmur@gmail.com</span></p>
+                    <p class="flex items-center space-x-3"><i class="fas fa-phone text-red-500"></i> <span>(876) 919-5439</span></p>
+                    <p class="flex items-center space-x-3"><i class="fas fa-map-marker-alt text-red-500"></i> <span>Kingston, JA</span></p>
                 </div>
             </div>
         </div>
 
         <!-- Right Container (Resume Timeline) -->
-        <div class="w-full md:w-2/3 bg-black/60 p-6 rounded-lg shadow-lg animate-fadeInRight">
+        <div class="w-full md:w-2/3 bg-black/30 p-6 rounded-lg shadow-lg animate-fadeInRight">
             <h2 class="text-3xl font-bold text-red-500 flex items-center space-x-3">
                 <i class="fas fa-file-alt"></i>
                 <span>Resume</span>
@@ -312,25 +306,5 @@
     .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
-
-<!-- FontAwesome Icons -->
-<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
-
-    <footer id="contact" class="py-16 bg-gray-700 text-center">
-        <h2 class="text-3xl font-semibold">Contact Me</h2>
-        <form id="contact-form" class="flex flex-col items-center space-y-4 mt-4">
-            <input type="text" id="name" placeholder="Your Name" class="w-4/5 p-3 rounded-lg text-gray-900" required>
-            <input type="email" id="email" placeholder="Your Email" class="w-4/5 p-3 rounded-lg text-gray-900" required>
-            <textarea id="message" placeholder="Your Message" class="w-4/5 p-3 rounded-lg text-gray-900" required></textarea>
-            <button type="submit" class="bg-red-500 px-6 py-2 rounded-lg shadow-md">Send</button>
-        </form>
-    </footer>
-    
-    <script>
-        document.getElementById("contact-form").addEventListener("submit", function(event) {
-            event.preventDefault();
-            alert("Message Sent!");
-        });
-    </script>
 </body>
 </html>
