--- a/jjjjj.html
+++ b/jjjjj.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-gray-900 text-white">
     <nav class="bg-black p-4 flex items-center justify-between">
@@ -47,7 +47,7 @@
 
             <!-- Icons for Roles -->
             <div class="mt-4 text-lg text-gray-300 flex justify-end space-x-4 opacity-0 animate-fadeIn delay-500">
-                <span class="flex items-center"><i class="text-red-500" src="https://cdn-icons-png.flaticon.com/128/2010/2010990.png"></i> Software Developer</span>
+                <span class="flex items-center"><i class="fas fa-laptop-code text-red-500 text-2xl"></i>💻 Software Developer</span>
                 <span class="flex items-center"><i class="fas fa-globe text-red-500"></i> 🌐 Web3 Enthusiast</span>
                 <span class="flex items-center"><i class="fas fa-tools text-red-500"></i> 🛠️ IT Consultant</span>
             </div>
@@ -93,7 +93,7 @@
         <!-- Left: About Text -->
         <div class="w-full md:w-1/2 animate-slideInLeft">
             <h1 class="text-5xl font-bold text-red-500 drop-shadow-lg flex items-center space-x-3">
-                <i class="fas fa-user text-red-500"></i>
+                <i class="fa-solid fa-user-tie text-red-500"></i>
                 <span>About Me</span>
             </h1>
             <h2 class="text-3xl font-semibold text-white mt-2">WHO AM I??</h2>
@@ -114,20 +114,20 @@
                 </h3>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                        <i class="fas fa-laptop-code text-red-500 text-2xl"></i>
-                        <span class="text-white">💻 Full-Stack Development</span>
+                        <i class="fa-solid fa-file-code text-red-500"></i>
+                        <span class="text-white"> Full-Stack Development</span>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                        <i class="fas fa-palette text-red-500 text-2xl"></i>
-                        <span class="text-white">💻 UI/UX Design</span>
+                        <i class="fa-solid fa-palette text-red-500 text-2xl"></i>
+                        <span class="text-white"> UI/UX Design</span>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                         <i class="fas fa-server text-red-500 text-2xl"></i>
-                        <span class="text-white">🛠️ Database Management</span>
+                        <span class="text-white"> Database Management</span>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                         <i class="fas fa-shield-alt text-red-500 text-2xl"></i>
-                        <span class="text-white">🛠️ Networking & Security</span>
+                        <span class="text-white"> Networking & Security</span>
                     </div>
                 </div>
             </div>
