--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,6 +6,7 @@
     <title>Professional Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://github.com/codEinstein-prog/codEinstein-prog-/blob/main/jjjjj.css">
 </head>
 <body class="bg-gray-900 text-white">
     <nav class="bg-black p-4 flex items-center justify-between">
@@ -47,9 +48,9 @@
 
             <!-- Icons for Roles -->
             <div class="mt-4 text-lg text-gray-300 flex justify-end space-x-4 opacity-0 animate-fadeIn delay-500">
-                <span class="flex items-center"><i class="fas fa-laptop-code text-red-500 text-2xl"></i>💻 Software Developer</span>
-                <span class="flex items-center"><i class="fas fa-globe text-red-500"></i> 🌐 Web3 Enthusiast</span>
-                <span class="flex items-center"><i class="fas fa-tools text-red-500"></i> 🛠️ IT Consultant</span>
+                <span class="flex items-center"><i class=" text-red-500 text-2xl"></i>💻 Software Developer</span>
+                <span class="flex items-center"><i class="text-red-500"></i> 🌐 Web3 Enthusiast</span>
+                <span class="flex items-center"><i class=" text-red-500"></i> 🛠️ IT Consultant</span>
             </div>
 
             <!-- Contact Me Button with Glow Effect -->
@@ -134,7 +135,7 @@
             <!-- Contact Button -->
             <div class="mt-6">
                 <a href="#contact" class="inline-block px-6 py-3 text-white bg-red-600 rounded-lg font-semibold text-lg shadow-md transition transform hover:scale-110 hover:bg-red-700">
-                    Contact Me
+                    Read More
                 </a>
             </div>
         </div>
@@ -229,6 +230,11 @@
                             <p class="text-gray-300">Assisted in full-stack web development projects.</p>
                         </li>
                     </ul>
+                    <div class="mt-6">
+                        <a download href="#contact" class="inline-block px-6 py-3 text-white bg-red-600 rounded-lg font-semibold text-lg shadow-md transition transform hover:scale-110 hover:bg-red-700">
+                            Download Resume
+                        </a>
+                    </div>
                 </div>
 
                 <!-- Right Side: Languages & Skills -->
@@ -285,6 +291,11 @@
                             <span>Cisco, Python</span>
                         </li>
                     </ul>
+                    <div class="mt-6">
+                        <a href="#contact" class="inline-block px-6 py-3 text-white bg-red-600 rounded-lg font-semibold text-lg shadow-md transition transform hover:scale-110 hover:bg-red-700">
+                            View More
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -306,5 +317,15 @@
     .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
+<section id="contact" class="bg-gradient-to-r from-gray-900 to-black flex items-center mx-auto px-4 space-y-6">
+    <h1 class="text-white-3xl font-bold mt-4">
+        Let's hear from you!
+    </h1>
+    <input type="text" name="First" placeholder="First Name" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800 w-1/2">
+    <input type="text" name="Last" placeholder="Last Name" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
+    <input type="email" name="Email" placeholder="Email" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
+    <textarea rows="5" col="60" type="text" name="Message" placeholder="Message" autocomplet="off" required class="bg-gradient-to-r from-gray-400 to-black text-red border-black block py-2 rounded focus:outline-none foucus:border-red-800"></textarea>
+    <button type="submit" class="bg-red-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-red-700 hover:shadow-red-500 transition duration-500 hover:shadow-lg">SEND</button>
+</section>
 </body>
 </html>
