--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,7 +6,7 @@
     <title>Professional Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://github.com/codEinstein-prog/codEinstein-prog-/blob/main/jjjjj.css">
+    <link rel="stylesheet" href="/build/tailwindcss">
 </head>
 <body class="bg-gray-900 text-white">
     <nav class="bg-black p-4 flex items-center justify-between">
@@ -318,13 +318,27 @@
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
 <section id="contact" class="bg-gradient-to-r from-gray-900 to-black flex items-center mx-auto px-4 space-y-6">
-    <h1 class="text-white-3xl font-bold mt-4">
-        Let's hear from you!
-    </h1>
-    <input type="text" name="First" placeholder="First Name" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800 w-1/2">
-    <input type="text" name="Last" placeholder="Last Name" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
-    <input type="email" name="Email" placeholder="Email" autocomplet="on" required class="bg-gradient-to-r from-gray-400 to-black text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
-    <textarea rows="5" col="60" type="text" name="Message" placeholder="Message" autocomplet="off" required class="bg-gradient-to-r from-gray-400 to-black text-red border-black block py-2 rounded focus:outline-none foucus:border-red-800"></textarea>
+    <div>
+        <h1 class="text-white-3xl font-bold mt-4">
+            Let's hear from you!
+        </h1>
+    </div>
+
+    <div>
+        <input type="text" name="First" placeholder="First Name" autocomplet="on" required class="bg-gray-400 text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800 w-1/2">
+    </div>
+
+    <div>
+        <input type="text" name="Last" placeholder="Last Name" autocomplet="on" required class="bg-400 text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
+    </div>
+
+    <div>
+        <input type="email" name="Email" placeholder="Email" autocomplet="on" required class="bg-gray-400 text-red-sm border-black block py-2 rounded focus:outline-none foucus:border-red-800w-1/2">
+    </div>
+
+    <div>
+        <textarea rows="5" col="60" type="text" name="Message" placeholder="Message" autocomplet="off" required class="bg-gradient-to-r from-gray-400 to-black text-red border-black block py-2 rounded focus:outline-none foucus:border-red-800"></textarea>
+    </div>
     <button type="submit" class="bg-red-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-red-700 hover:shadow-red-500 transition duration-500 hover:shadow-lg">SEND</button>
 </section>
 </body>
