--- a/jjjjj.html
+++ b/jjjjj.html
@@ -317,8 +317,8 @@
     .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
-<section id="contact" class="bg-gradient-to-r from-black/80 to-black flex items-center mx-auto">
-    <div class="bg-black/60 max-w-full my-32 px-4 mx-auto space-y-6 border-outline-white">
+<section id="contact" class="bg-gradient-to-r from-black/90 to-black flex items-center mx-auto">
+    <form class="bg-black/30 size-full max-w-full my-32 px-4 mx-auto space-y-6 border-outline-white">
         <div>
             <h1 class="text-white-3xl font-bold mt-4">
                 Let's hear from you!
@@ -341,7 +341,7 @@
             <textarea rows="5" col="60" type="text" name="Message" placeholder="Message" autocomplet="off" required class="bg-white text-white border-black block py-2 px-4 w-full rounded focus-outline-none foucus-border-red-800"></textarea>
         </div>
         <button type="submit" class="bg-red-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-red-700 hover:shadow-red-500 transition duration-500 hover:shadow-lg">SEND</button>
-    </div>
+    </form>
 </section>
 </body>
 </html>
