--- a/jjjjj.html
+++ b/jjjjj.html
@@ -171,7 +171,7 @@
     <div class="container mx-auto flex flex-wrap items-start justify-between px-8">
 
         <!-- Left Container (Profile & Contact) -->
-        <div class="w-full md:w-1/3 bg-gray-900 p-6 rounded-lg shadow-lg animate-slideInLeft">
+        <div class="w-full md:w-1/3 bg-gradient-to-b from-black/60 to-black/80 p-6 rounded-lg shadow-lg animate-slideInLeft">
             <!-- Profile Photo -->
             <div class="flex flex-col items-center">
                 <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
@@ -189,11 +189,13 @@
                     <span>Contact Info</span>
                 </h3>
                 <div class="mt-3 space-y-2">
-                    <p class="flex items-center space-x-3"><i class="fas fa-envelope text-red-500"></i> <span>net4gmur@gmail.com</span></p>
-                    <p class="flex items-center space-x-3"><i class="fas fa-phone text-red-500"></i> <span>(876) 919-5439</span></p>
-                    <p class="flex items-center space-x-3"><i class="fas fa-map-marker-alt text-red-500"></i> <span>Kingston, JA</span></p>
+                    <p class="flex items-center space-x-3 text-black"><i class="fas fa-envelope text-red-500"></i> <span>net4gmur@gmail.com</span></p>
+                    <p class="flex items-center space-x-3 text-black"><i class="fas fa-phone text-red-500"></i> <span>(876) 919-5439</span></p>
+                    <p class="flex items-center space-x-3 text-black"><i class="fas fa-map-marker-alt text-red-500"></i> <span>Kingston, JA</span></p>
                 </div>
             </div>
+            <h1></h1>
+            <h1></h1>
         </div>
 
         <!-- Right Container (Resume Timeline) -->
@@ -318,13 +320,12 @@
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
 <section id="contact" class="bg-gradient-to-r from-black/80 to-black/90 flex items-center mx-auto">
+
+    <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right size-1/4 object-center">
+        Let's hear from you!
+    </h1>
     
     <form class="bg-black/30 size-1/2 max-w-3xl my-32 px-4 mx-auto space-y-6 border-outline-white">
-        <div class="flex-text-center">
-            <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right size-1/4">
-                Let's hear from you!
-            </h1>
-        </div>
         
         <div>
             <input type="text" name="First" placeholder="First Name" autocomplet="on" required class="bg-white text-sm-black border-white block py-2 px-4 rounded focus-outline-none foucus-border-red w-full">
