--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <!-- Hero Text Content with Cinematic Animation -->
-        <div class="w-full md:w-1/2 text-right md:text-right animate-slideInRight">
+        <div class="w-1/2 md:w-1/2 text-right md:text-right animate-slideInRight">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-red-500 drop-shadow-lg">
                 Hi, I'm <span class="text-white">Nicholai Thomas</span>
             </h1>
@@ -67,7 +67,7 @@
             </p>
 
             <!-- Icons for Roles -->
-            <div class="mt-4 text-gray-300 flex flex-wrap justify-center md:justify-end space-x-3 opacity-0 animate-fadeIn delay-500">
+            <div class="mt-4 text-gray-300 flex flex-wrap justify-end md:justify-end space-x-3 opacity-0 animate-fadeIn delay-500">
                 <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">💻</i> Software Developer</span>
                 <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">🌐</i> Web3 Enthusiast</span>
                 <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">🛠️</i> IT Consultant</span>
