--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
             <!-- Icons for Roles -->
             <div class="mt-4 text-gray-300 flex flex-wrap justify-sart md:justify-end space-x-3 opacity-0 animate-fadeIn delay-500">
-                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">💻</i> Software Developer</span>
-                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">🌐</i> Web3 Enthusiast</span>
-                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2">🛠️</i> IT Consultant</span>
+                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2"></i>💻 Software Developer</span>
+                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2"></i>🌐 Web3 Enthusiast</span>
+                <span class="flex items-center text-sm sm:text-lg"><i class="text-red-500 text-xl mr-2"></i>🛠️ IT Consultant</span>
             </div>
 
             <!-- Contact Me Button -->
