--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
       <div class="p-6">
         <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">My Digital Story</h2>
         <p class="text-gray-600 mb-4">A short description of the blog post goes here to entice users to read more.</p>
-        <a href="https://github.com/codEinstein-prog/codEinstein-prog-/blob/main/read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
+        <a href="read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
       </div>
     </article>
 
