--- a/read-more.html
+++ b/read-more.html
@@ -37,7 +37,7 @@
         <!-- Gallery Section (Right) -->
     <div class="lg:w-1/3">
       <h3 class="text-2xl font-semibold text-indigo-700 mb-4">Gallery</h3>
-      <div class="grid grid-rows-4 gap-4">
+      <div class="grid grid-cols-1 gap-4">
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fwww.glenmuirhighschool.edu.jm%2Fimages%2Findex_images%2Fcrest.png&sp=1745368074Tdd4a328d4867db752756937aab02c9fcc2d493d989b258b5daf44cc18f0e27da" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 1">
         <img src="https://i.pinimg.com/736x/58/a4/df/58a4df93aa0b4520cd4e73f71b15f3b6.jpg" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 2">
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fglenmuirhspsa.com%2Fwp-content%2Fuploads%2F2018%2F06%2Fsign.jpg&sp=1745371486Te54e55ad7f391d3c5759288a64237963c06e6da93f5118a57793eb3f881a875b" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 3">
